--- a/package.json
+++ b/package.json
@@ -3,6 +3,14 @@
   "name": "hardhat-boilerplate-721",
   "version": "1.0.0",
   "description": "A boilerplate repository to get you started with Hardhat",
+  "scripts": {
+    "compile": "hardhat compile",
+    "deploy": "hardhat run --network mumbai ./scripts/deploy.js",
+    "mint": "hardhat run --network mumbai ./scripts/mint.js",
+    "node": "hardhat node",
+    "format": "prettier --check \"**/*.{ts,js,sol}\"",
+    "format:fix": "prettier --write \"**/*.{ts,js,sol}\""
+  },
   "license": "MIT",
   "keywords": [
     "hardhat",
@@ -15,7 +23,9 @@
   ],
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^2.0.2",
-    "hardhat": "^2.13.0"
+    "hardhat": "^2.13.0",
+    "prettier": "^2.6.2",
+    "prettier-plugin-solidity": "^1.0.0-beta.19"
   },
   "dependencies": {
     "dotenv": "^16.0.3"
