--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "prettier-plugin-solidity": "^1.0.0-beta.19"
   },
   "dependencies": {
+    "@openzeppelin/contracts": "^4.8.2",
     "dotenv": "^16.0.3"
   }
 }
