--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "description": "A boilerplate repository to get you started with Hardhat",
   "scripts": {
     "compile": "hardhat compile",
-    "deploy": "hardhat run --network mumbai ./scripts/deploy.js",
-    "mint": "hardhat run --network mumbai ./scripts/mint.js",
+    "deploy": "hardhat run --network mumbai scripts/deploy.ts",
+    "mint": "hardhat run --network mumbai scripts/mint.ts",
     "node": "hardhat node",
     "format": "prettier --check \"**/*.{ts,js,sol}\"",
     "format:fix": "prettier --write \"**/*.{ts,js,sol}\""
@@ -19,12 +19,21 @@
     "solidity",
     "starter",
     "ERC721",
-    "mumbai"
+    "mumbai",
+    "polygon",
+    "matic",
+    "nft",
+    "typechain",
+    "typescript"
   ],
   "devDependencies": {
+    "@typechain/ethers-v5": "^10.1.0",
+    "@typechain/hardhat": "^6.1.3",
     "@nomicfoundation/hardhat-toolbox": "^2.0.2",
     "hardhat": "^2.13.0",
     "prettier": "^2.6.2",
+    "typechain": "^8.1.0",
+    "ethers": "^5.7.1",
     "prettier-plugin-solidity": "^1.0.0-beta.19"
   },
   "dependencies": {
