--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,21 @@
-node_modules
-.env
-coverage
+# directories
+.idea
+**/artifacts
+**/build
+**/cache
+**/coverage
+**/.coverage_artifacts
+**/.coverage_cache
+**/.coverage_contracts
+**/dist
+**/node_modules
+**/types
+
+# files
+*.env
+*.log
+.pnp.*
 coverage.json
-typechain
-typechain-types
-
-#Hardhat files
-cache
-artifacts
-
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
